feat: added commitizen to manage commits

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,5 +4,15 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
+    "commitizen>=4.9.1",
     "duckdb>=1.4.1",
+    "pre-commit>=4.3.0",
 ]
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "pep440"
+version_provider = "uv"
+update_changelog_on_bump = true
+major_version_zero = true
