feat: started creating app. creating load saev config

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,48 +1,75 @@
 {
-	"name": "frontend",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"format": "prettier --write .",
-		"lint": "prettier --check . && eslint .",
-		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run && npm run test:e2e",
-		"test:e2e": "playwright test"
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.4.0",
-		"@eslint/js": "^9.36.0",
-		"@playwright/test": "^1.55.1",
-		"@sveltejs/adapter-static": "^3.0.9",
-		"@sveltejs/kit": "^2.43.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.18",
-		"@tailwindcss/vite": "^4.1.13",
-		"@types/node": "^22",
-		"@vitest/browser": "^3.2.4",
-		"eslint": "^9.36.0",
-		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.12.4",
-		"globals": "^16.4.0",
-		"playwright": "^1.55.1",
-		"prettier": "^3.6.2",
-		"prettier-plugin-svelte": "^3.4.0",
-		"prettier-plugin-tailwindcss": "^0.6.14",
-		"svelte": "^5.39.5",
-		"svelte-check": "^4.3.2",
-		"tailwindcss": "^4.1.13",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.44.1",
-		"vite": "^7.1.7",
-		"vitest": "^3.2.4",
-		"vitest-browser-svelte": "^1.1.0"
-	}
+  "name": "ducklearn",
+  "private": true,
+  "version": "0.2.0",
+  "description": "DuckLearn — an open learning framework powered by DuckDB.",
+  "license": "Apache-2.0",
+  "author": "Tomas Pecukevicius <contact@pecuk.dev>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Tomosius/DuckLearn"
+  },
+  "homepage": "https://github.com/Tomosius/DuckLearn",
+  "type": "module",
+
+  "scripts": {
+  "dev": "vite dev",
+  "build": "vite build",
+  "preview": "vite preview",
+  "serve:build": "serve -s build -l 4173",
+  "prepare": "svelte-kit sync || echo ''",
+  "typecheck": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --fail-on-warnings",
+  "format": "prettier --write .",
+  "format:check": "prettier --check .",
+  "lint:ts": "eslint . --ext .ts,.svelte --max-warnings=0",
+  "lint:css": "stylelint \"src/**/*.{css,svelte}\" --cache --report-needless-disables",
+  "lint:css:fix": "stylelint \"src/**/*.{css,svelte}\" --fix",
+  "lint": "npm run lint:ts && npm run lint:css && npm run format:check",
+  "lint:html": "html-validate --config config/html-validate.json --formatter stylish \"build/**/*.html\"",
+  "validate:html": "vnu --errors-only --skip-non-html build",
+  "validate:css:dist": "stylelint \"build/_app/**/*.css\" --config .stylelintrc.dist.cjs --ignore-path .stylelintignore.dist",
+  "validate:css:grammar": "node scripts/validate-css-grammar.mjs",
+  "validate": "npm run build && npm run lint:html && npm run validate:html && npm run validate:css:grammar",
+  "test:unit": "vitest run",
+  "test:unit:watch": "vitest",
+  "coverage": "vitest run --coverage",
+  "test:e2e": "playwright test",
+  "test:e2e:ui": "playwright test --ui",
+  "qa": "npm run typecheck && npm run lint && npm run validate && npm run test:unit && npm run test:e2e",
+  "ci": "npm run build && npm run qa && npm audit --omit=dev || true",
+  "optimize:svg": "svgo -f static -r",
+  "analyze": "VISUALIZE=1 vite build",
+  "postinstall": "playwright install",
+  "postbuild": "node config/generate-sitemap.mjs"
+},
+
+  "devDependencies": {
+    "@eslint/compat": "^1.4.0",
+    "@eslint/js": "^9.36.0",
+    "@playwright/test": "^1.55.1",
+    "@sveltejs/adapter-static": "^3.0.9",
+    "@sveltejs/kit": "^2.43.2",
+    "@sveltejs/vite-plugin-svelte": "^6.2.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.18",
+    "@tailwindcss/vite": "^4.1.13",
+    "@types/node": "^22",
+    "@vitest/browser": "^3.2.4",
+    "eslint": "^9.36.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-svelte": "^3.12.4",
+    "globals": "^16.4.0",
+    "playwright": "^1.55.1",
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "svelte": "^5.39.5",
+    "svelte-check": "^4.3.2",
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.44.1",
+    "vite": "^7.1.7",
+    "vitest": "^3.2.4",
+    "vitest-browser-svelte": "^1.1.0"
+  }
 }
